--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<h1>Les aventures des 6èmes</h1>
   <p class="important"
   <p>Texte normal.</p
 
