--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Mon site</title>
   <link rel="stylesheet" href="style.css">
+  <title>6ème ecole Suger-Sorties</title>
 </head>
 <body>
 <h1>Les aventures des 6èmes</h1>
