Add button to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Mon site</title>
   <link rel="stylesheet" href="style.css">
   <title>6ème ecole Suger-Sorties</title>
+  <button id="myButton">Click me</button>
 </head>
 <body>
 <h1>Les aventures des 6èmes</h1>
