--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 </head>
 <body>
 <h1>Les aventures des 6èmes</h1>
-  <p class="important"
-  <p>Texte normal.</p
-
+<script src="script.js"></script>
 </body>
 </html>
