--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Mon site</title>
   <link rel="stylesheet" href="style.css">
   <title>6ème ecole Suger-Sorties</title>
 </head>
 <body>
 <h1>Les aventures des 6èmes</h1>
+  <p>Bienvenues au site des sortie scolaires des 6ème de l'ecole Suger.</p>
 <script src="script.js"></script>
 </body>
 </html>
