--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
   <title>6ème ecole Suger-Sorties</title>
 </head>
 <body>
-<h1>Les aventures des 6èmes</h1>
+<button id="openModal">Open message</button>
+
+<div class="overlay" id="overlay">
+  <div class="modal">
+    <h2>Bienvenue 👋</h2>
+    <p>Bienvenue aux aventures des 6èmes !</p>
+    <button id="closeModal">Fermer</button>
+  </div>
+</div>
+
+  <h1>Les aventures des 6èmes</h1>
   <p>Bienvenues au site des sortie scolaires des 6ème de l'ecole Suger.</p>
 <script src="script.js"></script>
 </body>
