Enhance index.html with school outing details
Added content about school outings and educational objectives.

--- a/index.html
+++ b/index.html
@@ -26,5 +26,61 @@ lieux visités, photos, dates et souvenirs.
 </p>
 
 <script src="script.js"></script>
+<h1>Sorties scolaires des élèves de 6ème</h1>
+
+<p>
+Bienvenue sur le site officiel des sorties scolaires de notre classe.
+Ce site a pour objectif d’informer les parents sur les sorties pédagogiques
+organisées durant l’année scolaire.
+</p>
+
+<p>
+Vous y trouverez les dates, les lieux visités, les objectifs pédagogiques
+ainsi que quelques photos souvenirs.
+</p>
+<h2>Objectifs pédagogiques</h2>
+
+<ul>
+  <li>Découvrir des lieux culturels et éducatifs</li>
+  <li>Apprendre en dehors de la salle de classe</li>
+  <li>Développer la curiosité et l’autonomie des élèves</li>
+  <li>Renforcer la vie de groupe</li>
+</ul>
+<h2>Les sorties scolaires</h2>
+
+<table>
+  <tr>
+    <th>Sortie</th>
+    <th>Lieu</th>
+    <th>Date</th>
+  </tr>
+  <tr>
+    <td>Musée d’Histoire</td>
+    <td>Paris</td>
+    <td>Octobre 2025</td>
+  </tr>
+  <tr>
+    <td>Parc naturel</td>
+    <td>Région</td>
+    <td>Novembre 2025</td>
+  </tr>
+</table>
+<h2>Sortie au musée d’Histoire</h2>
+
+<p>
+Cette sortie avait pour objectif de découvrir l’histoire à travers
+des objets et des expositions interactives.
+</p>
+
+<p>
+Les élèves ont participé à une visite guidée adaptée à leur niveau.
+</p>
+<h2>À propos du site</h2>
+
+<p>
+Ce site a été réalisé par les élèves avec l’aide de leur enseignant
+dans le cadre d’un projet pédagogique d’initiation au numérique.
+</p>
+
 </body>
 </html>
