Add navigation bar and main content updates
Added a navigation bar and updated main content.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
   <title>6ème ecole Suger-Sorties</title>
+ <nav class="navbar">
+  <div class="logo">Sorties scolaires</div>
+  <ul class="nav-links">
+    <li><a href="index.html">Accueil</a></li>
+    <li><a href="sorties.html">Sorties</a></li>
+    <li><a href="galerie.html">Galerie</a></li>
+    <li><a href="apropos.html">À propos</a></li>
+  </ul>
+</nav>
+ 
 </head>
 <body>
   
@@ -15,7 +25,14 @@
     <button id="closeModal">Fermer</button>
   </div>
 </div>
+<main>
+  <h1>Sorties scolaires des élèves de 6ème</h1>
 
+  <p>
+    Ce site a pour objectif d’informer les parents sur les sorties scolaires
+    organisées durant l’année.
+  </p>
+</main>
   <h1>Les aventures des 6èmes</h1>
   <p>Bienvenues au site des sortie scolaires des 6ème de l'ecole Suger.</p>
   <h2>Sorties scolaires des 6èmes</h2>
