--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@ ainsi que quelques photos souvenirs.
     <th>Date</th>
   </tr>
   <tr>
-    <td>Musée d’Histoire</td>
-    <td>Paris</td>
-    <td>Octobre 2025</td>
+    <td>Prhéhistoire</td>
+    <td>Musée de Saint-Germain en Laie</td>
+    <td>18 Septembre 2025</td>
   </tr>
   <tr>
-    <td>Parc naturel</td>
-    <td>Région</td>
-    <td>Novembre 2025</td>
+    <td>Jean de la Fontaine</td>
+    <td>Paris</td></td>
+    <td>14 Janvier 2026</td>
   </tr>
 </table>
 <h2>Sortie au musée d’Histoire</h2>
