--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ ainsi que quelques photos souvenirs.
     <th>Date</th>
   </tr>
   <tr>
-    <td>Prhéhistoire</td>
+    <td>Préhistoire</td>
     <td>Musée de Saint-Germain en Laie</td>
     <td>18 Septembre 2025</td>
   </tr>
