--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
  
 </head>
 <body>
+  <section id="galerie">
+  <h2>Galerie photos</h2>
+
+  <div class="gallery">
+    <img src="" alt="Sortie scolaire 1">
+    <img src="" alt="Sortie scolaire 2">
+    <img src="" alt="Sortie scolaire 3">
+  </div>
+</section>
+
   
 
 <div class="overlay" id="overlay">
