--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h2>Galerie photos</h2>
 
   <div class="gallery">
-    <img src="" alt="Sortie scolaire 1">
+    <img src="IMG.0028.jpeg" alt="L'ecole">
     <img src="" alt="Sortie scolaire 2">
     <img src="" alt="Sortie scolaire 3">
   </div>
