--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <ul class="nav-links">
     <li><a href="index.html">Accueil</a></li>
     <li><a href="sorties.html">Sorties</a></li>
-    <li><a href="galerie.html">Galerie</a></li>
+    <li><a href="#galerie">Galerie</a></li>
     <li><a href="apropos.html">À propos</a></li>
   </ul>
 </nav>
@@ -18,16 +18,12 @@
 <body>
   <section id="galerie">
   <h2>Galerie photos</h2>
-
   <div class="gallery">
     <img src="IMG.0028.jpeg" alt="L'ecole">
     <img src="" alt="Sortie scolaire 2">
     <img src="" alt="Sortie scolaire 3">
   </div>
 </section>
-
-  
-
 <div class="overlay" id="overlay">
   <div class="modal">
     <
