--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <section id="galerie">
   <h2>Galerie photos</h2>
   <div class="gallery">
-    <img src="IMG.0028.jpeg" alt="L'ecole">
+    <img src="IMG_0028.jpeg" alt="L'ecole">
     <img src="" alt="Sortie scolaire 2">
     <img src="" alt="Sortie scolaire 3">
   </div>
