--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <section id="galerie">
   
   <div class="gallery">
-    <img src="IMG_0028.jpeg" alt="L'ecole">
+    <img src="IMG_0028.jpeg" alt="L'ecole"class="galerie-photo">
   </div>
 </section>
 <div class="overlay" id="overlay">
