--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <section id="galerie">
   
   <div class="gallery">
+    <h1>Suger</h1>
     <img src="IMG_0028.jpeg" alt="L'ecole"class="galerie-photo">
   </div>
 </section>
