--- a/index.html
+++ b/index.html
@@ -30,43 +30,27 @@
   </div>
 </div>
 <main>
-<h1>Sorties scolaires des élèves de 6ème</h1>
-  <p>
+  <h1>
     Ce site a pour objectif d’informer les parents sur les sorties scolaires
     organisées durant l’année.
-  </p>
+  </h1>
 </main>
   <h1>Les aventures des 6èmes</h1>
   <p>Bienvenues au site des sortie scolaires des 6ème de l'ecole Suger.</p>
-  <h2>Sorties scolaires des 6èmes</h2>
 <p>
-Bienvenue sur le site de notre classe !
 Ici, vous trouverez toutes les informations sur nos sorties scolaires :
 lieux visités, photos, dates et souvenirs.
 </p>
 
 <script src="script.js"></script>
-<h1>Sorties scolaires des élèves de 6ème</h1>
-
-<p>
-Bienvenue sur le site officiel des sorties scolaires de notre classe.
-Ce site a pour objectif d’informer les parents sur les sorties pédagogiques
-organisées durant l’année scolaire.
-</p>
-
-<p>
-Vous y trouverez les dates, les lieux visités, les objectifs pédagogiques
-ainsi que quelques photos souvenirs.
-</p>
 <h2>Objectifs pédagogiques</h2>
-
 <ul>
   <li>Découvrir des lieux culturels et éducatifs</li>
   <li>Apprendre en dehors de la salle de classe</li>
   <li>Développer la curiosité et l’autonomie des élèves</li>
   <li>Renforcer la vie de groupe</li>
 </ul>
-<h2>Les sorties scolaires</h2>
+<h2>Tableau des sorties</h2>
 
 <table>
   <tr>
@@ -91,15 +75,13 @@ ainsi que quelques photos souvenirs.
 Cette sortie avait pour objectif de découvrir l’histoire à travers
 des objets et des expositions interactives.
 </p>
-
 <p>
 Les élèves ont participé à une visite guidée adaptée à leur niveau.
 </p>
 <h2>À propos du site</h2>
-
+  
 <p>
-Ce site a été réalisé par les élèves avec l’aide de leur enseignant
-dans le cadre d’un projet pédagogique d’initiation au numérique.
+Ce site a été réalisé par des élèves dans le cadre d’un projet non obligé
 </p>
 
 
