--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <section id="galerie">
   
-  <div class="gallery">
+  <div class="galerie">
     <h1>Suger</h1>
     <img src="IMG_0028.jpeg" alt="L'ecole"class="galerie-photo">
   </div>
