--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <li><a href="apropos.html">À propos</a></li>
   </ul>
 </nav>
-  <div class="galerie">
+  <div>
     <h1>Suger</h1>
-    <img src="IMG_0028.jpeg" alt="L'ecole"class="galerie-photo">
+    <img src="IMG_0028.jpeg" alt="L'ecole">
   </div>
 </section>
 <div class="overlay" id="overlay">
@@ -81,6 +81,9 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
 <p>
 Ce site a été réalisé par des élèves dans le cadre d’un projet non obligé
 </p>
+  <div class=galerie
+    <h1>Galerie de photos</h1>
+    <img scr="IMG_0029 alt="Sortie Histoire" class="galerie-photos">
 
 
 </body>
