--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@ Ce site a été réalisé par des élèves dans le cadre d’un projet non oblig
 </p>
   <div class=galerie
     <h1>Galerie de photos</h1>
-    <img scr="IMG_0029 alt="Sortie Histoire" class="galerie-photos">
+    <img scr="IMG_0192 alt="Sortie Histoire" class=galerie-photos>
+    <img scr="IMG_0373 alt "sortie histoire" class=galerie-photos>
 
 
 </body>
