--- a/index.html
+++ b/index.html
@@ -76,16 +76,13 @@ des objets et des expositions interactives.
 <p>
 Les élèves ont participé à une visite guidée adaptée à leur niveau.
 </p>
-<h2>À propos du site</h2>
-  
-<p>
-Ce site a été réalisé par des élèves dans le cadre d’un projet non obligé
-</p>
   <div class=galerie
     <h1>Galerie de photos</h1>
     <img scr="IMG_0192 alt="Sortie Histoire" class=galerie-photos>
     <img scr="IMG_0373 alt "sortie histoire" class=galerie-photos>
+  </div>
+  <h2>À propos du site</h2>
 
-
+  <p>Ce site a été réalisé par des eleves</p>
 </body>
 </html>
