Fix HTML structure and correct image attributes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>6ème ecole Suger-Sorties</title>
 </head>
 <body>
-  <section id="galerie">
   <nav class="navbar">
   <div class="logo">Sorties scolaires</div>
   <ul class="nav-links">
@@ -16,6 +15,7 @@
     <li><a href="apropos.html">À propos</a></li>
   </ul>
 </nav>
+  <section id="galerie">
   <div>
     <h1>Suger</h1>
     <img src="IMG_0028.jpeg" alt="L'ecole">
@@ -23,7 +23,6 @@
 </section>
 <div class="overlay" id="overlay">
   <div class="modal">
-    <
     <button id="closeModal">Fermer</button>
   </div>
 </div>
@@ -32,9 +31,9 @@
     Ce site a pour objectif d’informer les parents sur les sorties scolaires
     organisées durant l’année.
   </h1>
-</main>
   <h1>Les aventures des 6èmes</h1>
   <p>Bienvenues au site des sortie scolaires des 6ème de l'ecole Suger.</p>
+</main>
 <p>
 Ici, vous trouverez toutes les informations sur nos sorties scolaires :
 lieux visités, photos, dates et souvenirs.
@@ -63,7 +62,7 @@ lieux visités, photos, dates et souvenirs.
   </tr>
   <tr>
     <td>Jean de la Fontaine</td>
-    <td>Paris</td></td>
+    <td>Paris</td>
     <td>14 Janvier 2026</td>
   </tr>
 </table>
@@ -76,10 +75,10 @@ des objets et des expositions interactives.
 <p>
 Les élèves ont participé à une visite guidée adaptée à leur niveau.
 </p>
-  <div class=galerie
+  <div class="galerie">
     <h1>Galerie de photos</h1>
-    <img scr="IMG_0192 alt="Sortie Histoire" class=galerie-photos>
-    <img scr="IMG_0373 alt "sortie histoire" class=galerie-photos>
+    <img src="IMG_0192 alt="Sortie Histoire" class="galerie-photos">
+    <img src="IMG_0373 alt "sortie histoire" class="galerie-photos">
   </div>
   <h2>À propos du site</h2>
 
