--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
   <div class="galerie">
     <h1>Galerie de photos</h1>
     <img src="IMG_0192 alt="Sortie Histoire" class="galerie-photos">
-    <img src="IMG_0373 alt "sortie histoire" class="galerie-photos">
+    <img src="IMG_0373 alt="sortie histoire" class="galerie-photos">
   </div>
   <h2>À propos du site</h2>
 
