--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ des objets et des expositions interactives.
 Les élèves ont participé à une visite guidée adaptée à leur niveau.
 </p>
   <div class="galerie">
-    <h1>Galerie de photos</h1>
+    <h1 id="galerie-photos"> Galerie de photos</h1>
     <img src="IMG_0192 alt="Sortie Histoire" class="galerie-photos">
     <img src="IMG_0373 alt="sortie histoire" class="galerie-photos">
   </div>
