--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <ul class="nav-links">
     <li><a href="index.html">Accueil</a></li>
     <li><a href="sorties.html">Sorties</a></li>
-    <li><a href="#galerie">Galerie</a></li>
+    <li><a href="#galerie-photos">Galerie</a></li>
     <li><a href="apropos.html">À propos</a></li>
   </ul>
 </nav>
