--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
     <li><a href="apropos.html">À propos</a></li>
   </ul>
 </nav>
-  <section id="galerie">
   <div>
     <h1>Suger</h1>
     <img src="IMG_0028.jpeg" alt="L'ecole">
   </div>
-</section>
 <div class="overlay" id="overlay">
   <div class="modal">
     <button id="closeModal">Fermer</button>
@@ -75,11 +73,17 @@ des objets et des expositions interactives.
 <p>
 Les élèves ont participé à une visite guidée adaptée à leur niveau.
 </p>
+  <section id="galerie-photos">
   <div class="galerie">
     <h1 id="galerie-photos"> Galerie de photos</h1>
-    <img src="IMG_0192 alt="Sortie Histoire" class="galerie-photos">
-    <img src="IMG_0373 alt="sortie histoire" class="galerie-photos">
+    <img src="IMG_0192 alt="Sortie Histoire" onclick="openLightbox(this)">
+    <img src="IMG_0373 alt="sortie histoire" onclick="openLightbox(this)">
   </div>
+  </section>
+<!-- Lightbox -->
+<div id="lightbox" onclick="closeLightbox()">
+  <img id="lightbox-img">
+</div>
   <h2>À propos du site</h2>
 
   <p>Ce site a été réalisé par des eleves</p>
