--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
   <section id="galerie-photos">
   <div class="galerie">
     <h1 id="galerie-photos"> Galerie de photos</h1>
-    <img src="IMG_0192 alt="Sortie Histoire" onclick="openLightbox(this)">
-    <img src="IMG_0373 alt="sortie histoire" onclick="openLightbox(this)">
+    <img src="IMG_0192.jpeg alt="Sortie Histoire" onclick="openLightbox(this)">
+    <img src="IMG_0373.jpeg alt="sortie histoire" onclick="openLightbox(this)">
   </div>
   </section>
 <!-- Lightbox -->
