--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
 </p>
   <section id="galerie-photos">
   <div class="galerie">
-    <h1 id="galerie-photos"> Galerie de photos</h1>
+    <h1>Galerie de photos</h1>
     <img src="IMG_0192.jpeg" alt="Sortie Histoire" onclick="openLightbox(this)">
     <img src="IMG_0373.jpeg" alt="sortie histoire" onclick="openLightbox(this)">
   </div>
