--- a/index.html
+++ b/index.html
@@ -36,8 +36,6 @@
 Ici, vous trouverez toutes les informations sur nos sorties scolaires :
 lieux visités, photos, dates et souvenirs.
 </p>
-
-<script src="script.js"></script>
 <h2>Objectifs pédagogiques</h2>
 <ul>
   <li>Découvrir des lieux culturels et éducatifs</li>
@@ -87,5 +85,6 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
   <h2>À propos du site</h2>
 
   <p>Ce site a été réalisé par des eleves</p>
-</body>
+  <script src="script.js"></script>
+</body
 </html>
