Add button to open modal in index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <button id="closeModal">Fermer</button>
   </div>
 </div>
+  <button id="openModal">ouvrir</button>
 <main>
   <h1>
     Ce site a pour objectif d’informer les parents sur les sorties scolaires
