Add section headers for photo gallery

--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
   <section id="galerie-photos">
   <div class="galerie">
     <h1>Galerie de photos</h1>
+    <h2>Muséed'histoire</h2>
     <img src="IMG_0192.jpeg" alt="Sortie Histoire" onclick="openLightbox(this)">
     <img src="IMG_0373.jpeg" alt="sortie histoire" onclick="openLightbox(this)">
+    <h2>Exposition de Jean de la Fontaine</h2>
+    <h2>Musée de l'air et de l'éspace</h2>
   </div>
   </section>
 <!-- Lightbox -->
