Add images to photo gallery section

--- a/index.html
+++ b/index.html
@@ -75,8 +75,12 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
   <div class="galerie">
     <h1>Galerie de photos</h1>
     <h2>Muséed'histoire</h2>
-    <img src="" alt="Sortie Histoire" onclick="openLightbox(this)">
-    <img src="" alt="sortie histoire" onclick="openLightbox(this)">
+    <img src="20250919_103758.jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
+    <img src="20250919_102212.jpg" alt="sortie histoire" onclick="openLightbox(this)">
+    <img src="20250919_.jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
+    <img src="20250919_.jpg" alt="sortie histoire" onclick="openLightbox(this)">
+    <img src="20250919_.jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
+    <img src="20250919_.jpg" alt="sortie histoire" onclick="openLightbox(this)">
     <h2>Exposition de Jean de la Fontaine</h2>
     <h2>Musée de l'air et de l'éspace</h2>
   </div>
