--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
     <h2>Muséed'histoire</h2>
     <img src="20250919_103758.jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
     <img src="20250919_102212.jpg" alt="sortie histoire" onclick="openLightbox(this)">
-    <img src="20250919_.jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
-    <img src="20250919_.jpg" alt="sortie histoire" onclick="openLightbox(this)">
-    <img src="20250919_.jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
-    <img src="20250919_.jpg" alt="sortie histoire" onclick="openLightbox(this)">
+    <img src="20250919_111640.jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
+    <img src="20250919_112746.jpg" alt="sortie histoire" onclick="openLightbox(this)">
+    <img src="20250919_115435.jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
+    <img src="20250919_104941.jpg" alt="sortie histoire" onclick="openLightbox(this)">
     <h2>Exposition de Jean de la Fontaine</h2>
     <h2>Musée de l'air et de l'éspace</h2>
   </div>
