--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
     <img src="20250919_104941.jpg" alt="sortie histoire" onclick="openLightbox(this)">
     <h2>Exposition de Jean de la Fontaine</h2>
     <h2>Musée de l'air et de l'éspace</h2>
+     <img src=".jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
+    <img src=".jpg" alt="sortie histoire" onclick="openLightbox(this)">
   </div>
   </section>
 <!-- Lightbox -->
