--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
     <h2>Exposition de Jean de la Fontaine</h2>
     <h2>Musée de l'air et de l'éspace</h2>
      <img src=".jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
-    <img src="20250191_105343.jpg" alt="sortie histoire" onclick="openLightbox(this)">
+    <img src="IMG_0255.jpeg" alt="sortie histoire" onclick="openLightbox(this)">
   </div>
   </section>
 <!-- Lightbox -->
