--- a/index.html
+++ b/index.html
@@ -95,5 +95,5 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
 
   <p>Ce site a été réalisé par des eleves et les photos aussi!!!</p>
   <script src="script.js"></script>
-</body
+</body>
 </html>
