Add ID to 'Tableau des sorties' heading

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ lieux visités, photos, dates et souvenirs.
   <li>Développer la curiosité et l’autonomie des élèves</li>
   <li>Renforcer la vie de groupe</li>
 </ul>
-<h2>Tableau des sorties</h2>
+<h2 id="tableau-sorties">Tableau des sorties</h2>
 
 <table>
   <tr>
