Link navbar Sorties button to sorties table section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="logo">Sorties scolaires</div>
   <ul class="nav-links">
     <li><a href="index.html">Accueil</a></li>
-    <li><a href="sorties.html">Sorties</a></li>
+    <li><a href="#tableau-sorties">Sorties</a></li>
     <li><a href="#galerie-photos">Galerie</a></li>
     <li><a href="apropos.html">À propos</a></li>
   </ul>
@@ -44,7 +44,6 @@ lieux visités, photos, dates et souvenirs.
   <li>Renforcer la vie de groupe</li>
 </ul>
 <h2 id="tableau-sorties">Tableau des sorties</h2>
-<li><a href="#tableau-sorties" class="btn-sorties">Tableau</a></li>
 <table>
   <tr>
     <th>Sortie</th>
