--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="logo">Sorties scolaires</div>
   <ul class="nav-links">
     <li><a href="index.html">Accueil</a></li>
-    <li><a href="sorties.html">Sorties</a></li>
+    <li><a href="#tableau-sorties">Sorties</a></li>
     <li><a href="#galerie-photos">Galerie</a></li>
     <li><a href="apropos.html">À propos</a></li>
   </ul>
