Add new museum visit entry for aviation and space

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@ lieux visités, photos, dates et souvenirs.
     <td>Paris</td>
     <td>14 Janvier 2026</td>
   </tr>
+  <tr>
+    <td>Sciences: avions et fusées</td>
+    <td>Musée de l'air et de l'éspace</td>
+    <td>6 fevrier 2026u</td>
+  </tr>
 </table>
 <h2>Sortie au musée d’Histoire</h2>
 
