--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </ul>
 </nav>
   <div>
-    <h1>Suger</h1>
+    <h1>Les 6èmes de Suger: Vaucresson</h1>
     <img src="IMG_0028.jpeg" alt="L'ecole">
   </div>
 <div class="overlay" id="overlay">
