--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
-  <title>6ème ecole Suger-Sorties</title>
+  <title>Suger-Sorties: 6ème</title>
 </head>
 <body>
   <nav class="navbar">
