--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ lieux visités, photos, dates et souvenirs.
   <tr>
     <td>Sciences: avions et fusées</td>
     <td>Musée de l'air et de l'éspace</td>
-    <td>6 fevrier 2026u</td>
+    <td>6 fevrier 2026</td>
   </tr>
 </table>
 <h2>Sortie au musée d’Histoire</h2>
