Update link for 'À propos' section in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <li><a href="index.html">Accueil</a></li>
     <li><a href="#tableau-sorties">Sorties</a></li>
     <li><a href="#galerie-photos">Galerie</a></li>
-    <li><a href="#À propos-site">À propos</a></li>
+    <li><a href="#apropos-site">À propos</a></li>
   </ul>
 </nav>
   <div>
