--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="#apropos-site">À propos</a></li>
   </ul>
 </nav>
+  <h2 id="apropos-site">À propos du site</h2>
   <div>
     <h1>Les 6èmes de Suger: Vaucresson</h1>
     <img src="IMG_0028.jpeg" alt="L'ecole">
