--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <nav class="navbar">
   <div class="logo">Sorties scolaires</div>
   <ul class="nav-links">
-    <li><a href="index.html">Accueil</a></li>
+    <li><a href="#Les-Vaucresson">Accueil</a></li>
     <li><a href="#tableau-sorties">Sorties</a></li>
     <li><a href="#galerie-photos">Galerie</a></li>
     <li><a href="#apropos-site">À propos</a></li>
