--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <nav class="navbar">
   <div class="logo">Sorties scolaires</div>
   <ul class="nav-links">
-    <li><a href="#Les-Vaucresson">Accueil</a></li>
+    <li><a href="#accueil-suger">Accueil</a></li>
     <li><a href="#tableau-sorties">Sorties</a></li>
     <li><a href="#galerie-photos">Galerie</a></li>
     <li><a href="#apropos-site">À propos</a></li>
   </ul>
 </nav>
+ <h1 id="accueil-suger">Les aventures des 6èmes</h1> 
   <div>
     <h1>Les 6èmes de Suger: Vaucresson</h1>
     <img src="IMG_0028.jpeg" alt="L'ecole">
