--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
 </p>
   <section id="galerie-photos">
   <div class="galerie">
-    <h1>Galerie de photos</h1>
+    <h1>Galerie de photos et videos</h1>
     <h2>Musée d'histoire</h2>
     <img src="20250919_103758.jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
     <img src="20250919_102212.jpg" alt="sortie histoire" onclick="openLightbox(this)">
@@ -90,6 +90,11 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
     <h2>Musée de l'air et de l'éspace</h2>
      <img src="IMG_0256.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG_0255.jpeg" alt="sortie Sciences" onclick="openLightbox(this)">
+    <video controls preload="metadata" class="video-galerie">
+  <source src="videos/sortie-musee.mp4" type="video/mp4">
+  Votre navigateur ne supporte pas la vidéo HTML5.
+</video>
+
   </div>
   </section>
 <!-- Lightbox -->
