Modify video tag attributes in index.html
Updated video tag to include alt attribute and removed class.

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
     <h2>Musée de l'air et de l'éspace</h2>
      <img src="IMG_0256.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG_0255.jpeg" alt="sortie Sciences" onclick="openLightbox(this)">
-    <video controls preload="metadata" class="video-galerie">
-  <source src="IMG_0173.mov" type="video/mp4">
+    <video controls preload="metadata">
+  <source src="IMG_0173.mov" type="video/mp4" alt="Sortie sciences" onclick="openLightbox(this)>
   Votre navigateur ne supporte pas la vidéo HTML5.
 </video>
 
