--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Les élèves ont participé à une visite guidée adaptée à leur niveau.
      <img src="IMG_0256.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG_0255.jpeg" alt="sortie Sciences" onclick="openLightbox(this)">
     <video controls preload="metadata">
-  <source src="IMG_0173.mov" type="video/mp4" alt="Sortie sciences" class="Videos">
+  <source src="IMG_0173.mov" type="video/mp4" alt="Sortie sciences" class="videos-gallery">
   Votre navigateur ne supporte pas la vidéo HTML5.
 </video>
 
