Add descriptions of museum outings

--- a/index.html
+++ b/index.html
@@ -67,15 +67,29 @@ lieux visités, photos, dates et souvenirs.
     <td>6 fevrier 2026</td>
   </tr>
 </table>
-<h2>Sortie au musée d’Histoire</h2>
-
-<p>
-Cette sortie avait pour objectif de découvrir l’histoire à travers
-des objets et des expositions interactives.
-</p>
-<p>
-Les élèves ont participé à une visite guidée adaptée à leur niveau.
-</p>
+<h2>Descriptions des sorties</h2>
+  <table>
+  <tr>
+    <th>Préhistoire</th>
+    <th>Jean de la Fontaine</th>
+    <th>Sciences: avions et fusées</th>
+  </tr>
+  <tr>
+    <td>Préhistoire</td>
+    <td>Musée de Saint-Germain en Laie</td>
+    <td>18 Septembre 2025</td>
+  </tr>
+  <tr>
+    <td>Jean de la Fontaine</td>
+    <td>Paris</td>
+    <td>14 Janvier 2026</td>
+  </tr>
+  <tr>
+    <td>Sciences: avions et fusées</td>
+    <td>Musée de l'air et de l'éspace</td>
+    <td>6 fevrier 2026</td>
+  </tr>
+</table>
   <section id="galerie-photos">
   <div class="galerie">
     <h1>Galerie de photos et videos</h1>
