Update table data in index.html

--- a/index.html
+++ b/index.html
@@ -75,14 +75,13 @@ lieux visités, photos, dates et souvenirs.
     <th>Sciences: avions et fusées</th>
   </tr>
   <tr>
+    <td>Cette sortie avait pour objectif </td>
+  </tr>
+  <tr>
     <td></td>
-    
   </tr>
   <tr>
-    <td>14 Janvier 2026</td>
-  </tr>
-  <tr>
-    <td>6 fevrier 2026</td>
+    <td></td>
   </tr>
 </table>
   <section id="galerie-photos">
