--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ lieux visités, photos, dates et souvenirs.
   </tr>
 </table>
   <section id="galerie-photos">
-  <div class="galerie">
+  <div class="gallerie">
     <h1>Galerie de photos et videos</h1>
     <h2>Musée d'histoire</h2>
     <img src="20250919_103758.pg" alt="Sortie Histoire" onclick="openLightbox(this)">
