--- a/index.html
+++ b/index.html
@@ -112,4 +112,11 @@ lieux visités, photos, dates et souvenirs.
   <p>Ce site a été réalisé par des eleves et les photos aussi!!!</p>
   <script src="script.js"></script>
 </body>
+  <script>
+    const password = "334807";
+    let userPassword = prompt("Veuillez entrer le mot de passe :");
+    if (userPassword !== password) {
+      document.body.innerHTML = "<h1>Accès REFUSÉ</h1>";
+    }
+  </script>
 </html>
