--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ lieux visités, photos, dates et souvenirs.
     const password = "334807";
     let userPassword = prompt("Veuillez entrer le mot de passe :");
     if (userPassword !== password) {
-      document.body.innerHTML = "<h1>Accès REFUSÉ</h1>";
+      document.body.innerHTML = "<h1>🚫❌❌❌Accès REFUSÉ❌❌❌🚫</h1>";
     }
   </script>
 </html>
