--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@ lieux visités, photos, dates et souvenirs.
   <div class="gallerie">
     <h1>Galerie de photos et videos</h1>
     <h2>Musée d'histoire</h2>
-    <img src="20250919_103758.pg" alt="Sortie Histoire" onclick="openLightbox(this)">
-    <img src="20250919_102212.pg" alt="sortie histoire" onclick="openLightbox(this)">
-    <img src="20250919_111640.jg" alt="Sortie Histoire" onclick="openLightbox(this)">
-    <img src="20250919_112746.jp" alt="sortie histoire" onclick="openLightbox(this)">
-    <img src="20250919_115435.pg" alt="Sortie Histoire" onclick="openLightbox(this)">
-    <img src="20250919_104941.jg" alt="sortie histoire" onclick="openLightbox(this)">
+    <img src="20250919_103758.jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
+    <img src="20250919_102212.jpg" alt="sortie histoire" onclick="openLightbox(this)">
+    <img src="20250919_111640.jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
+    <img src="20250919_112746.jpg" alt="sortie histoire" onclick="openLightbox(this)">
+    <img src="20250919_115435.jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
+    <img src="20250919_104941.jpg" alt="sortie histoire" onclick="openLightbox(this)">
     <h2>Exposition de Jean de la Fontaine</h2>
     <h2>Musée de l'air et de l'éspace</h2>
      <img src="IMG_0256.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
