--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ lieux visités, photos, dates et souvenirs.
      <img src="IMG_0256.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG_0255.jpeg" alt="sortie Sciences" onclick="openLightbox(this)">
     <video controls preload="metadata">
-  <source src="IMG_0173.mov" type="video/mp4" alt="Sortie sciences" class="videos-gallery">
+  <source src="VID-20260212-WA003 (1).mp4" type="video/mp4" alt="Sortie sciences" class="videos-gallery">
   Votre navigateur ne supporte pas la vidéo HTML5.
 </video>
 
