--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@ lieux visités, photos, dates et souvenirs.
     <h2>Musée de l'air et de l'éspace</h2>
      <img src="IMG_0256.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG_0255.jpeg" alt="sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG-20260212-WA0010.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG-20260212-WA0021.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG-20260212-WA0027.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG-20260212-WA0029.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <video controls preload="metadata">
   <source src="VID-20260212-WA0033 (1).mp4" type="video/mp4" alt="Sortie sciences" class="videos-gallery">
   Votre navigateur ne supporte pas la vidéo HTML5.
