--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@ lieux visités, photos, dates et souvenirs.
     <img src="IMG-20260212-WA0010.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG-20260212-WA0021.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG-20260212-WA0027.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
-    <img src="IMG-20260212-WA0029.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG-20260212-WA0029.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">  
+    <img src=".jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src=".jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src=".jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <video controls preload="metadata">
   <source src="VID-20260212-WA0033 (1).mp4" type="video/mp4" alt="Sortie sciences" class="videos-gallery">
   Votre navigateur ne supporte pas la vidéo HTML5.
