--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ lieux visités, photos, dates et souvenirs.
     <img src="20250919_112746.jpg" alt="sortie histoire" onclick="openLightbox(this)">
     <img src="20250919_115435.jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
     <img src="20250919_104941.jpg" alt="sortie histoire" onclick="openLightbox(this)">
+    <img src="20250919_112746.jpg" alt="Sortie histoire" onclick="openLightbox(this)">
     <h2>Exposition de Jean de la Fontaine</h2>
     <h2>Musée de l'air et de l'éspace</h2>
      <img src="IMG_0256.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
@@ -101,7 +102,6 @@ lieux visités, photos, dates et souvenirs.
     <img src="IMG-20260212-WA0021.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG-20260212-WA0027.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG-20260212-WA0029.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">  
-    <img src=".jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src=".jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src=".jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <video controls preload="metadata">
