--- a/index.html
+++ b/index.html
@@ -102,8 +102,14 @@ lieux visités, photos, dates et souvenirs.
     <img src="IMG-20260212-WA0021.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG-20260212-WA0027.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG-20260212-WA0029.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">  
-    <img src=".jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
-    <img src=".jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_102149.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_102149 (1).jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_102241.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">  
+    <img src="20260206_102731.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_102752.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_103431.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">  
+    <img src="" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="" alt="Sortie Sciences" onclick="openLightbox(this)">
     <video controls preload="metadata">
   <source src="VID-20260212-WA0033 (1).mp4" type="video/mp4" alt="Sortie sciences" class="videos-gallery">
   Votre navigateur ne supporte pas la vidéo HTML5.
