Add multiple images to index.html

--- a/index.html
+++ b/index.html
@@ -108,8 +108,29 @@ lieux visités, photos, dates et souvenirs.
     <img src="20260206_102731.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="20260206_102752.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="20260206_103431.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">  
-    <img src="" alt="Sortie Sciences" onclick="openLightbox(this)">
-    <img src="" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_103431.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">  
+    <img src="20260206_103657.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_104324.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_104826.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_105759.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_105852.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_110027.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_134339.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_135811.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_143227.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="20260206_154022.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG-20260212-WA0010.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG-20260212-WA0021.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG-20260212-WA0027.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG-20260212-WA0029.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG_0028.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG_0173.mov" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG_0192.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG_0255.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG_0256.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG_0320.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG_0322.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <img src="IMG_0373.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <video controls preload="metadata">
   <source src="VID-20260212-WA0033 (1).mp4" type="video/mp4" alt="Sortie sciences" class="videos-gallery">
   Votre navigateur ne supporte pas la vidéo HTML5.
