--- a/index.html
+++ b/index.html
@@ -66,23 +66,6 @@ lieux visités, photos, dates et souvenirs.
     <td>6 fevrier 2026</td>
   </tr>
 </table>
-<h2>Descriptions des sorties</h2>
-  <table>
-  <tr>
-    <th>Préhistoire</th>
-    <th>Jean de la Fontaine</th>
-    <th>Sciences: avions et fusées</th>
-  </tr>
-  <tr>
-    <td>Cette sortie avait pour objectif </td>
-  </tr>
-  <tr>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-  </tr>
-</table>
   <section id="galerie-photos">
   <div class="galerie">
     <h1>Galerie de photos et videos</h1>
@@ -131,22 +114,16 @@ lieux visités, photos, dates et souvenirs.
     <img src="IMG_0320.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG_0322.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG_0373.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
-    <video controls preload="metadata">
-  <source src="VID-20260212-WA0033 (1).mp4" type="video/mp4" alt="Sortie sciences" class="videos-gallery">
+    <video class="videos-gallery" controls preload="metadata" poster="miniatures/video1.jpg">
+  <source src="VID-20260212-WA0033.mp4" type="video/mp4">
   Votre navigateur ne supporte pas la vidéo HTML5.
 </video>
-        <video controls preload="metadata">
-  <source src="VID-20260212-WA0033.mp4" type="video/mp4" alt="Sortie sciences" class="videos-gallery">
+    <video class="videos-gallery" controls preload="metadata" poster="miniatures/video1.jpg">
+  <source src="VID-20260212-WA0035.mp4" type="video/mp4">
   Votre navigateur ne supporte pas la vidéo HTML5.
-        </video>
-        <video controls preload="metadata">
-  <source src="VID-20260212-WA034.mp4" type="video/mp4" alt="Sortie sciences" class="videos-gallery">
-  Votre navigateur ne supporte pas la vidéo HTML5.
-        </video>
-        <video controls preload="metadata">
-  <source src="VID-20260212-WA0035.mp4" type="video/mp4" alt="Sortie sciences" class="videos-gallery">
-  Votre navigateur ne supporte pas la vidéo HTML5.
-        </video>
+</video>
+    
+
 
   </div>
   </section>
