--- a/index.html
+++ b/index.html
@@ -111,7 +111,15 @@ lieux visités, photos, dates et souvenirs.
     <img src="IMG_0255.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG_0256.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG_0320.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
-      <img src="VID-20260212-WA0033.mp4" alt="Sortie Sciences" onclick="openLightbox(this)">
+    <video class="videos-gallery" controls preload="metadata" poster="miniatures/video1.jpg">
+  <source src="VID-20260212-WA0033.mp4" type="video/mp4">
+  Votre navigateur ne supporte pas la vidéo HTML5.
+</video>
+<video class="videos-gallery" controls preload="metadata" poster="miniatures/video1.jpg">
+  <source src="VID-20260212-WA0034" type="video/mp4">
+  Votre navigateur ne supporte pas la vidéo HTML5.
+</video>
+
     
 
 
