--- a/index.html
+++ b/index.html
@@ -76,8 +76,6 @@ lieux visités, photos, dates et souvenirs.
     <img src="20250919_112746.jpg" alt="sortie histoire" onclick="openLightbox(this)">
     <img src="20250919_115435.jpg" alt="Sortie Histoire" onclick="openLightbox(this)">
     <img src="20250919_104941.jpg" alt="sortie histoire" onclick="openLightbox(this)">
-    <img src="20250919_112746.jpg" alt="Sortie histoire" onclick="openLightbox(this)">
-    <h2>Exposition de Jean de la Fontaine</h2>
     <h2>Musée de l'air et de l'éspace</h2>
      <img src="IMG_0256.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG_0255.jpeg" alt="sortie Sciences" onclick="openLightbox(this)">
@@ -114,7 +112,7 @@ lieux visités, photos, dates et souvenirs.
   Votre navigateur ne supporte pas la vidéo HTML5.
 </video>
 <video class="videos-gallery" controls preload="metadata" poster="miniatures/video1.jpg">
-  <source src="VID-20260212-WA0035" type="video/mp4">
+  <source src="VID-20260212-WA0033 (1)" type="video/mp4">
   Votre navigateur ne supporte pas la vidéo HTML5.
 </video>
 
