--- a/index.html
+++ b/index.html
@@ -103,16 +103,13 @@ lieux visités, photos, dates et souvenirs.
     <img src="IMG-20260212-WA0010.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG-20260212-WA0021.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
     <img src="IMG-20260212-WA0027.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
-    <img src="IMG-20260212-WA0029.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">
-    <img src="IMG_0028.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
-    <img src="IMG_0192.jpeg" alt="Sortie Sciences" onclick="openLightbox(this)">
-  
+    <img src="IMG-20260212-WA0029.jpg" alt="Sortie Sciences" onclick="openLightbox(this)">>
     <video class="videos-gallery" controls preload="metadata" poster="miniatures/video1.jpg">
   <source src="VID-20260212-WA0033.mp4" type="video/mp4">
   Votre navigateur ne supporte pas la vidéo HTML5.
 </video>
 <video class="videos-gallery" controls preload="metadata" poster="miniatures/video1.jpg">
-  <source src="VID-20260212-WA0033 (1)" type="video/mp4">
+  <source src="VID-20260212-WA0033 (1).mp4" type="video/mp4">
   Votre navigateur ne supporte pas la vidéo HTML5.
 </video>
 
