--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     organisées durant l’année.
   </h1>
   <h1>Les aventures des 6èmes</h1>
-  <p>Bienvenues au site des sortie scolaires des 6ème de l'ecole Suger.</p>
+  <p>Bienvenues au site des sorties scolaires des 6ème de l'école Suger.</p>
 </main>
 <p>
 Ici, vous trouverez toutes les informations sur nos sorties scolaires :
