--- a/index.html
+++ b/index.html
@@ -112,9 +112,11 @@ lieux visités, photos, dates et souvenirs.
   <source src="VID-20260212-WA0034.mp4" type="video/mp4">
   Votre navigateur ne supporte pas la vidéo HTML5.
 </video>
-
+    <h2>Autre</h2>
+    <img src=".jpg" alt="Autre" onclick="openLightbox(this)">
+    <img src=".jpg" alt="Autre" onclick="openLightbox(this)">
+    <img src=".jpg" alt="Autre" onclick="openLightbox(this)">
     
-
 
   </div>
   </section>
