--- a/index.html
+++ b/index.html
@@ -113,11 +113,9 @@ lieux visités, photos, dates et souvenirs.
   Votre navigateur ne supporte pas la vidéo HTML5.
 </video>
     <h2>Autre</h2>
-    <img src=".jpg" alt="Autre" onclick="openLightbox(this)">
-    <img src=".jpg" alt="Autre" onclick="openLightbox(this)">
-    <img src=".jpg" alt="Autre" onclick="openLightbox(this)">
-    
-
+    <img src="20251216_125049.jpg" alt="Autre" onclick="openLightbox(this)">
+    <img src="20251216_084813.jpg" alt="Autre" onclick="openLightbox(this)">
+    <img src="20251216_130316.jpg" alt="Autre" onclick="openLightbox(this)">
   </div>
   </section>
 <!-- Lightbox -->
