Add feedback message for users
Added a paragraph encouraging users to send feedback.

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ lieux visités, photos, dates et souvenirs.
 </div>
 <h2 id="apropos-site">À propos du site</h2>
   <p>Ce site a été réalisé par des eleves et les photos aussi!!!</p>
+  <p>N'hésitez à envoyer un message école direct si il y a un problème ou un avis!!! </p>
   <script src="script.js"></script>
 </body>
   <script>
