--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@ lieux visités, photos, dates et souvenirs.
   <img id="lightbox-img">
 </div>
 <h2 id="apropos-site">À propos du site</h2>
-  <p>Ce site a été réalisé par des eleves et les photos aussi!!!</p>
-  <p>N'hésitez à envoyer un message école direct si il y a un problème ou un avis!!! </p>
+  <p>Ce site a été réalisé par des eleves et quelques photos aussi!</p>
+  <p>N'hésitez à envoyer un message école direct si il y a un problème ou un avis!!!</p>
+  <h11>Cliquez sur les photos pour les agrandir sur votre écran!</h11>
   <script src="script.js"></script>
 </body>
   <script>
